updating for Task2

--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -41,7 +41,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "dataFrame2b = pd.read_csv ('task2b.csv',delimiter='\\t',header=None, index_col=False)"
+    "\n",
+    "#read the 2nd file without header with column name 'id_student', 'click_events'\n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) "
    ]
   },
   {
@@ -61,9 +63,9 @@
     "\n",
     "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
     "#read the 2nd file without header\n",
-    "dataFrame2b = pd.read_csv(\"task2b.csv\", delimiter=\"\\t\", header=None, index_col=False) \n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
     "#using the merge function to merge the 2 dataFrames\n",
-    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True)"
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True )"
    ]
   },
   {
@@ -113,7 +115,7 @@
     "#  Remove any rows that contain missing values using dropna() function  \n",
     "dataFrameMerged.dropna()\n",
     "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
-    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_event <= 10]"
+    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]"
    ]
   },
   {
@@ -128,7 +130,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
+    "#read the 2nd file without header\n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
+    "#using the merge function to merge the 2 dataFrames\n",
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True )\n",
+    "#  Remove any rows that contain missing values using dropna() function  \n",
+    "dataFrameMerged.dropna()\n",
+    "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
+    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]\n",
+    "#Rename the score column to final_mark\n",
+    "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +159,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add code here"
+    "import pandas as pd\n",
+    "\n",
+    "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
+    "#read the 2nd file without header\n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
+    "#using the merge function to merge the 2 dataFrames\n",
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True )\n",
+    "#  Remove any rows that contain missing values using dropna() function  \n",
+    "dataFrameMerged.dropna()\n",
+    "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
+    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]\n",
+    "#Rename the score column to final_mark\n",
+    "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n",
+    "#Remove unnecessary column(s) region, final_result and highest_education\n",
+    "dataFrameMerged = dataFrameMerged.drop(['region', 'final_result' ,'highest_education'], axis=1)"
    ]
   },
   {
@@ -159,7 +189,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add code here"
+    "import pandas as pd\n",
+    "\n",
+    "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
+    "#read the 2nd file without header\n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
+    "#using the merge function to merge the 2 dataFrames\n",
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True )\n",
+    "#  Remove any rows that contain missing values using dropna() function  \n",
+    "dataFrameMerged.dropna()\n",
+    "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
+    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]\n",
+    "#Rename the score column to final_mark\n",
+    "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n",
+    "#Remove unnecessary column(s) region, final_result and highest_education\n",
+    "dataFrameMerged = dataFrameMerged.drop(['region', 'final_result' ,'highest_education'], axis=1)\n",
+    "#Write the DataFrame data to a CSV file\n",
+    "# the file name is taskNew.csv\n",
+    "dataFrameMerged.to_csv(\"taskNew.csv\", sep='\\t')"
    ]
   },
   {
