updating for Task2

--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -205,8 +205,8 @@
     "#Remove unnecessary column(s) region, final_result and highest_education\n",
     "dataFrameMerged = dataFrameMerged.drop(['region', 'final_result' ,'highest_education'], axis=1)\n",
     "#Write the DataFrame data to a CSV file\n",
-    "# the file name is taskNew.csv\n",
-    "dataFrameMerged.to_csv(\"taskNew.csv\", sep='\\t')"
+    "# the file name is update.csv\n",
+    "dataFrameMerged.to_csv(\"update.csv\", sep='\\t')"
    ]
   },
   {
