Fixing an issue of FR2.9

--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -88,7 +88,7 @@
     "dataFrame2b = pd.read_csv(\"task2b.csv\", delimiter=\"\\t\", header=None, index_col=False) \n",
     "#using the merge function to merge the 2 dataFrames\n",
     "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True)\n",
-    "#  Remove any rows that contain missing values using dropna() function  \n",
+    "#  Remove any rows that contain missing values using dropna()function  \n",
     "dataFrameMerged.dropna()"
    ]
   },
@@ -226,9 +226,9 @@
     "import numpy as np\n",
     "\n",
     "#using mean from numpy to calculate the mean of final score\n",
-    "df = pd.read_csv(\"update.csv\") \n",
+    "df = pd.read_csv(\"update.csv\",delimiter=\"\\t\",index_col=False) \n",
     "df = df.groupby('age_band') \\\n",
-    "       .agg({'final_score':'mean'}) \\\n",
+    "       .agg({'final_mark':'mean'}) \\\n",
     "       .reset_index()"
    ]
   },
