Fixing an issue in FR2.10

--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -250,16 +250,16 @@
     "import matplotlib.pyplot as plt\n",
     "from pandas.plotting import table\n",
     "\n",
-    "df = pd.read_csv(\"update.csv\") \n",
+    "df = pd.read_csv(\"update.csv\",delimiter=\"\\t\",index_col=False) \n",
     "df = df.groupby('age_band') \\\n",
-    "       .agg({'final_score':'mean'}) \\\n",
+    "       .agg({'final_mark':'mean'}) \\\n",
     "       .reset_index()\n",
     "\n",
     "\n",
     "plt.figure(figsize=(16,8))\n",
     "# plot chart\n",
     "ax1 = plt.subplot(121, aspect='equal')\n",
-    "df.plot(kind='pie', y = 'final_score', ax=ax1, autopct='%1.1f%%', \n",
+    "df.plot(kind='pie', y = 'final_mark', ax=ax1, autopct='%1.1f%%', \n",
     " startangle=90, shadow=False, labels=df['age_band'], legend = False, fontsize=14)\n",
     "\n",
     "# plot table\n",
@@ -268,7 +268,8 @@
     "tbl = table(ax2, df, loc='center')\n",
     "tbl.auto_set_font_size(False)\n",
     "tbl.set_fontsize(14)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
