Fixing an issue in FR2.10

--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -85,9 +85,9 @@
     "\n",
     "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
     "#read the 2nd file without header\n",
-    "dataFrame2b = pd.read_csv(\"task2b.csv\", delimiter=\"\\t\", header=None, index_col=False) \n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
     "#using the merge function to merge the 2 dataFrames\n",
-    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, left_index=True, right_index=True)\n",
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, on=['id_student'] )\n",
     "#  Remove any rows that contain missing values using dropna()function  \n",
     "dataFrameMerged.dropna()"
    ]
@@ -109,7 +109,7 @@
     "\n",
     "dataFrame2a = pd.read_csv(\"task2a.csv\")\n",
     "#read the 2nd file without header\n",
-    "dataFrame2b = pd.read_csv(\"task2b.csv\", delimiter=\"\\t\", header=None, index_col=False) \n",
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
     "#using the merge function to merge the 2 dataFrames\n",
     "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, on=['id_student'] )\n",
     "#  Remove any rows that contain missing values using dropna() function  \n",
