Adding print to test

--- a/UFCFVQ-15-M Programming Task 1 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 1 Template.ipynb
@@ -28,7 +28,11 @@
     "    n = len(data_list)\n",
     "    # Mean of the data_list\n",
     "    mean = sum(data_list) / n\n",
-    "    return mean"
+    "    return mean\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = mean(list)\n",
+    "print(res)\n"
    ]
   },
   {
@@ -52,7 +56,11 @@
     "    # Calculate the variance\n",
     "    variance = sum([((x - mean_val) ** 2) for x in list_data]) / n\n",
     "    deviations = variance ** 0.5\n",
-    "    return deviations "
+    "    return deviations\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = standard_deviation(list)\n",
+    "print(res)"
    ]
   },
   {
@@ -72,7 +80,13 @@
     "max(data_list)\n",
     "\n",
     "#min of the data list\n",
-    "min(data_list)"
+    "min(data_list)\n",
+    "\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = min(list)\n",
+    "res2 = max(list)\n",
+    "print(res , res2 )"
    ]
   },
   {
@@ -93,7 +107,11 @@
     "def percentile_25(data_list):\n",
     "    size = len(data_list)\n",
     "    res = sorted(data_list)[int(math.ceil((size * 25) / 100)) - 1]\n",
-    "    return res"
+    "    return res\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = percentile_25(list)\n",
+    "print(res )"
    ]
   },
   {
@@ -114,7 +132,12 @@
     "def percentile_50(data_list):\n",
     "    size = len(data_list)\n",
     "    res = sorted(data_list)[int(math.ceil((size * 50) / 100)) - 1]\n",
-    "    return res"
+    "    return res\n",
+    "\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = percentile_50(list)\n",
+    "print(res )"
    ]
   },
   {
@@ -135,7 +158,11 @@
     "def percentile_75(data_list):\n",
     "    size = len(data_list)\n",
     "    res = sorted(data_list)[int(math.ceil((size * 75) / 100)) - 1]\n",
-    "    return res"
+    "    return res\n",
+    "#test\n",
+    "list =[1,2,3,4,5,6,7,8,9,10]\n",
+    "res = percentile_75(list)\n",
+    "print(res )"
    ]
   },
   {
@@ -219,7 +246,8 @@
     "import csv\n",
     "\n",
     "with open('task1.csv') as csv_file:\n",
-    "    csv_reader = csv.reader(csv_file, delimiter=',') #the data of CSV will be stored in the csv_reader"
+    "    csv_reader = csv.reader(csv_file, delimiter=',') #the data of CSV will be stored in the csv_reader\n",
+    "pirnt(csv_reader)"
    ]
   },
   {
