--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "dataFrame2a = pd.read_csv ('task2a.csv')"
+    "dataFrame2a = pd.read_csv ('task2a.csv')\n",
+    "print(dataFrame2a)"
    ]
   },
   {
@@ -43,7 +44,8 @@
     "import pandas as pd\n",
     "\n",
     "#read the 2nd file without header with column name 'id_student', 'click_events'\n",
-    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) "
+    "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
+    "print(dataFrame2b)"
    ]
   },
   {
@@ -65,7 +67,8 @@
     "#read the 2nd file without header\n",
     "dataFrame2b = pd.read_csv(\"task2b.csv\",names=['id_student', 'click_events'], header=None) \n",
     "#using the merge function to merge the 2 dataFrames\n",
-    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, on=['id_student'] )"
+    "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, on=['id_student'] )\n",
+    "print(dataFrameMerged)"
    ]
   },
   {
@@ -89,7 +92,8 @@
     "#using the merge function to merge the 2 dataFrames\n",
     "dataFrameMerged = pd.merge(dataFrame2a, dataFrame2b, on=['id_student'] )\n",
     "#  Remove any rows that contain missing values using dropna()function  \n",
-    "dataFrameMerged.dropna()"
+    "dataFrameMerged = dataFrameMerged.dropna()\n",
+    "print(dataFrameMerged)"
    ]
   },
   {
@@ -115,7 +119,8 @@
     "#  Remove any rows that contain missing values using dropna() function  \n",
     "dataFrameMerged.dropna()\n",
     "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
-    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]"
+    "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]\n",
+    "print(dataFrameMerged)"
    ]
   },
   {
@@ -143,7 +148,8 @@
     "#Remove all rows from the DataFrame where click_event is smaller than 10  \n",
     "dataFrameMerged = dataFrameMerged[dataFrameMerged.click_events >= 10]\n",
     "#Rename the score column to final_mark\n",
-    "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n"
+    "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n",
+    "print(dataFrameMerged)"
    ]
   },
   {
@@ -173,7 +179,8 @@
     "#Rename the score column to final_mark\n",
     "dataFrameMerged = dataFrameMerged.rename(columns={'score': 'final_mark'})\n",
     "#Remove unnecessary column(s) region, final_result and highest_education\n",
-    "dataFrameMerged = dataFrameMerged.drop(['region', 'final_result' ,'highest_education'], axis=1)"
+    "dataFrameMerged = dataFrameMerged.drop(['region', 'final_result' ,'highest_education'], axis=1)\n",
+    "print(dataFrameMerged)"
    ]
   },
   {
@@ -229,7 +236,9 @@
     "df = pd.read_csv(\"update.csv\",delimiter=\"\\t\",index_col=False) \n",
     "df = df.groupby('age_band') \\\n",
     "       .agg({'final_mark':'mean'}) \\\n",
-    "       .reset_index()"
+    "       .reset_index()\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
