Reading the file task1.bat to test the functions

--- a/UFCFVQ-15-M Programming Task 1 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 1 Template.ipynb
@@ -30,9 +30,14 @@
     "    mean = sum(data_list) / n\n",
     "    return mean\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = mean(list)\n",
-    "print(res)\n"
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "res = mean(list_content) # calculate the mean\n",
+    "print(\"The mean of task1.bat is:\" ) #print the result\n",
+    "print(res ) #print the result\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -58,9 +63,12 @@
     "    deviations = variance ** 0.5\n",
     "    return deviations\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = standard_deviation(list)\n",
-    "print(res)"
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "res = standard_deviation(list_content) # calculate the standard_deviation\n",
+    "print(\"The standard deviation of task1.bat is: \" ) #print the result\n",
+    "print(res ) #print the result"
    ]
   },
   {
@@ -83,10 +91,16 @@
     "min(data_list)\n",
     "\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = min(list)\n",
-    "res2 = max(list)\n",
-    "print(res , res2 )"
+    "\n",
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "res = min(list_content) # calculate the min\n",
+    "print(\"The Min : \" ) #print the result\n",
+    "print(res ) #print the result\n",
+    "res = max(list_content) # calculate the max\n",
+    "print(\"The Max : \" ) #print the result\n",
+    "print(res ) #print the result"
    ]
   },
   {
@@ -109,9 +123,12 @@
     "    res = sorted(data_list)[int(math.ceil((size * 25) / 100)) - 1]\n",
     "    return res\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = percentile_25(list)\n",
-    "print(res )"
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "print(\"The percentile 25 : \" ) #print the result\n",
+    "res = percentile_25(list_content) # calculate the percentile_25\n",
+    "print(res ) #print the result"
    ]
   },
   {
@@ -135,9 +152,12 @@
     "    return res\n",
     "\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = percentile_50(list)\n",
-    "print(res )"
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "print(\"The percentile 50 : \" ) #print the result\n",
+    "res = percentile_50(list_content) # calculate the percentile_50\n",
+    "print(res ) #print the result"
    ]
   },
   {
@@ -160,9 +180,12 @@
     "    res = sorted(data_list)[int(math.ceil((size * 75) / 100)) - 1]\n",
     "    return res\n",
     "#test\n",
-    "list =[1,2,3,4,5,6,7,8,9,10]\n",
-    "res = percentile_75(list)\n",
-    "print(res )"
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "print(\"The percentile 75 : \" ) #print the result\n",
+    "res = percentile_75(list_content) # calculate the percentile_75\n",
+    "print(res ) #print the result"
    ]
   },
   {
@@ -186,7 +209,13 @@
     "    print(\"25%\",percentile_25(data_list) )\n",
     "    print(\"50%\" ,percentile_50(data_list))\n",
     "    print(\"75%\", percentile_75(data_list) )\n",
-    "    print(\"Max\", max(data_list) )"
+    "    print(\"Max\", max(data_list) )\n",
+    "#test\n",
+    "my_file = open(\"task1.dat\", \"r\")   # open the file on mode read\n",
+    "list_content = my_file.readlines()  #read the file to list\n",
+    "list_content = [int(i) for i in list_content] #to convert the list of String to numbers\n",
+    "print(\"The summary : \" ) #print the result\n",
+    "res = summary(list_content) # calculate the mean"
    ]
   },
   {
