Corrections in the F1.9 and F1.12

--- a/UFCFVQ-15-M Programming Task 1 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 1 Template.ipynb
@@ -256,9 +256,9 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "def read_file_csv():\n",
-    "    my_file = open(\"task1.csv\", \"r\")   # open the file on mode read\n",
-    "    csvFile = csv.reader(my_file)\n",
+    "def read_file_csv(file_name):\n",
+    "    my_file = open(file_name, \"r\")   # open the file on mode read\n",
+    "    csvFile = csv.reader(my_file, delimiter=',')\n",
     "  # store the contents of the CSV file in a list of list\n",
     "    return csvFile"
    ]
@@ -277,10 +277,9 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "\n",
-    "with open('task1.csv') as csv_file:\n",
-    "    csv_reader = csv.reader(csv_file, delimiter=',') #the data of CSV will be stored in the csv_reader\n",
-    "pirnt(csv_reader)"
+    "#using the function from FR1.9 to read the file task1.csv\n",
+    "csv_reader = read_file_csv('task1.csv')\n",
+    "print(csv_reader)"
    ]
   },
   {
@@ -296,21 +295,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('task1.csv') as csv_file:\n",
-    "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
-    "    line_count = 0\n",
-    "    for row in csv_reader:\n",
-    "        if line_count == 0: #skip the header\n",
-    "            line_count += 1\n",
-    "        else:\n",
-    "            data_list = [float(i) for i in row]\n",
-    "            mean(data_list) \n",
-    "            standard_deviation(data_list) \n",
-    "            min(data_list)\n",
-    "            max(data_list)\n",
-    "            percentile_25(data_list) \n",
-    "            percentile_50(data_list)\n",
-    "            percentile_75(data_list)"
+    "import csv\n",
+    "import math\n",
+    "#using the function from FR1.9 to read the file task1.csv\n",
+    "csv_reader = read_file_csv(\"task1.csv\")\n",
+    "print(csv_reader)\n",
+    "line_count = 0\n",
+    "for row in csv_reader:\n",
+    "    if line_count == 0:  # skip the header\n",
+    "        line_count += 1\n",
+    "    else:\n",
+    "        data_list = [float(i) for i in row]\n",
+    "        #using the function from FR1.7 to print the summary\n",
+    "        summary(data_list)"
    ]
   },
   {
@@ -327,17 +324,31 @@
    "outputs": [],
    "source": [
     "import csv\n",
+    "import math\n",
+    "#create a display_in_table fuction to print in talbe \n",
+    "def display_in_table(data_list):\n",
+    "    print \"Name\\t\\t\\tValue\\t\\t\"\n",
+    "    print \"----------------------------------------------\"\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('count', len(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('Mean', mean(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('std', standard_deviation(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('Min', min(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('25%', percentile_25(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('50%', percentile_50(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('75%', percentile_75(data_list))\n",
+    "    print \"%s:\\t\\t\\t%f\\t\" % ('max', max(data_list))\n",
+    "    print \"----------------------------------------------\"\n",
     "\n",
-    "with open('task1.csv') as csv_file:\n",
-    "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
-    "    line_count = 0\n",
-    "    for row in csv_reader:\n",
-    "        if line_count == 0: #skip the header\n",
-    "            line_count += 1\n",
-    "        else:\n",
-    "            print(\"####################################################\") #just separator\n",
-    "            row = [float(i) for i in row]\n",
-    "            summary(row) #call the function from FR1.7"
+    "#using the function from FR1.9 to read the file task1.csv\n",
+    "csv_reader = read_file_csv(\"task1.csv\")\n",
+    "print(csv_reader)\n",
+    "line_count = 0\n",
+    "for row in csv_reader:\n",
+    "    if line_count == 0:  # skip the header\n",
+    "        line_count += 1\n",
+    "    else:\n",
+    "        data_list = [float(i) for i in row]\n",
+    "        display_in_table(data_list)"
    ]
   },
   {
