--- a/UFCFVQ-15-M Programming Task 2 Template.ipynb
+++ b/UFCFVQ-15-M Programming Task 2 Template.ipynb
@@ -290,18 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Spearmans correlation: 0.314\n",
-      "Pearsons correlation: 0.275\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -326,7 +317,9 @@
     "\n",
     "# calculate Pearson's correlation\n",
     "corr, _ = pearsonr(col_mark_list, col_click_list)\n",
-    "print('Pearsons correlation: %.3f' % corr)"
+    "print('Pearsons correlation: %.3f' % corr)\n",
+    "pyplot.scatter(col_mark_list, col_click_list)\n",
+    "pyplot.show()"
    ]
   },
   {
